# direwolf-display

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
app/: __init__.py  config.py  deps.py  frontend.py  ingest.py  main.py  models.py  stations.py  status.py  storage.py  stream.py
app/templates/: __init__.py  index.html
infra/ansible/: inventory.ini  site.yml
infra/systemd/: direwolf-display.service  direwolf-tail.service  direwolf.service  rtl-power.service
infra/templates/: direwolf.conf.j2  direwolf.env.j2
scripts/: firstrun.sh  pi_postinstall.sh  run_direwolf.sh  run_rtl_power.sh
tests/: __init__.py  test_api.py  test_rtl_power_monitor.py  test_storage.py
tests/tools/: test_direwolf_csv_tail.py
tools/: __init__.py  aprs_passcode.py  direwolf_csv_tail.py  replay_fixture.py  rtl_power_monitor.py
