[project]
name = "direwolf-display-server"
version = "0.1.0"
description = "FastAPI service for streaming Direwolf APRS packets and RF telemetry."
authors = [{ name = "Direwolf Display Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "sa818>=0.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "anyio>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "tools"]

[tool.setuptools.package-data]
app = ["templates/*.html"]

[tool.uvicorn]
factory = true
app = "app.main:create_app"
port = 9090
